--- a/war/admin/css/app.min.1.css
+++ b/war/admin/css/app.min.1.css
@@ -9757,7 +9757,7 @@ body #content {
 }
 
 #header {
-  background: #4285F4;
+  background: #9C27B0;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
   height: 65px;
   position: fixed;
